--- a/styles/style.css
+++ b/styles/style.css
@@ -27,8 +27,7 @@ main {
 }
 
 .main-div{
-  padding-left: 100px;
-  padding-right: 100px;
+  margin-left: 100px;
 }
 
 .description{
@@ -58,5 +57,24 @@ main {
   padding: 10px;
   display: flex;
   justify-content: space-between;
-  border-radius: 3px;
+  border-radius: 5px;
+}
+
+footer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-transform: uppercase;
+  font-weight: 500;
+  font-size: 12px;
+}
+footer > ul{
+  list-style-type: none;
+  display: flex;
+  justify-content: space-evenly;
+  color:#1c5380;
+  width: 60%;
+}
+footer > p{
+  color: grey;
 }
