--- a/styles/style.css
+++ b/styles/style.css
@@ -43,8 +43,9 @@ body {
   }
   
   .login{
-  /*background: #326088;*/
+  background: #326088;
   background: linear-gradient(#608bad,#43759d);
+  background-position:right;
   padding: 20px 20px;
   text-decoration: none;
   font-size: 21px;
