--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,59 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
-body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+* {
   margin: 0;
+  padding: 0;
+}
+
+body {
+  font: 200 16px/1.5  Helvetica;
+  margin: 0;
+  background-color: #06365f;
+}
+
+main {
+  display: flex;
+  flex-direction: row;
+}
+
+h2{
+  padding-right: 180px;
+  padding-top: 10px;
+  margin-bottom: 20px;
+  color: #06365f;
+}
+article{
+  padding: 20px 60px 50px 50px;
+  background-image: url("images/frame.png");
+}
+
+footer{
+  
+  display: flex;
+  justify-content: space-around;
+}
+
+.ul{
+  list-style-type: none;
+  text-decoration: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.left-section{
+  margin: 80px 10px 30px 110px;
+}
+
+.right-section{
+  margin: 80px 200px 30px 80px;
+}
+
+.app-links{
+  padding-left: 50px;
+}
+
+.android-link{
+  margin-left: 10px;
 }
