--- a/styles/style.css
+++ b/styles/style.css
@@ -45,9 +45,9 @@ body {
   .login{
   background: #326088;
   background: linear-gradient(#608bad,#43759d);
-  background-position:right;
+  margin:20px;
   padding: 20px 20px;
-  text-decoration: none;
+  text-decoration:none;
   font-size: 21px;
   color: white;
   width:100px;
@@ -103,8 +103,4 @@ li{
 nav ul li a{
   text-decoration: none;
   color:#1c5380;
-}
-
-nav ul li a .Copyright{
-  color:gray;
 }
