--- a/styles/style.css
+++ b/styles/style.css
@@ -45,6 +45,7 @@ body {
   .login{
   background: #326088;
   background: linear-gradient(#608bad,#43759d);
+  background-image:url(/images/home.png);
   margin:20px;
   padding: 20px 20px;
   text-decoration:none;
