--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,10 @@ light blue: #1c5380
     padding: 0;
 }
 
+html {
+    height: 100%;
+}
+
 body {
     font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
     margin: 0;
