--- a/styles/style.css
+++ b/styles/style.css
@@ -46,6 +46,7 @@ body {
   background: #326088;
   background: linear-gradient(#608bad,#43759d);
   background-image:url(/images/home.png);
+  background-image: no-repeat;
   margin:20px;
   padding: 20px 20px;
   text-decoration:none;
