--- a/styles/style.css
+++ b/styles/style.css
@@ -45,7 +45,7 @@ body {
   .login{
   background: #326088;
   background: linear-gradient(#608bad,#43759d);
-  /*margin:20px; */
+  margin:20px;
   padding: 10px 40px;
   text-decoration:none;
   font-size: 21px;
