--- a/styles/style.css
+++ b/styles/style.css
@@ -45,13 +45,13 @@ body {
   .login{
   background: #326088;
   background: linear-gradient(#608bad,#43759d);
-  margin:10px;
+  margin:-100px;
   padding: 10px 20px;
   text-decoration:none;
   font-size: 21px;
   color: white;
   width:100px;
-  text-align:right;
+  text-align:center;
   }
 
 h1 {
