--- a/styles/style.css
+++ b/styles/style.css
@@ -17,6 +17,7 @@ body {
     font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
     margin: 0;
     background: repeating-linear-gradient( #1c5380 0px, #06365f 40%, white 40%, white 100%);
+    background-repeat: no-repeat;
 }
 
 .main-container {
@@ -40,7 +41,7 @@ body {
     padding-bottom: 0;
     background-image: url("../images/frame.png");
     background-position: center top;
-    background-size: 100% auto;
+    background-size: 100% 100%;
 }
 
 .description-header {
@@ -59,7 +60,6 @@ body {
     font-weight: 500;
     text-decoration: none;
     background: repeating-linear-gradient( #1c5380 0px, #06365f 100%);
-    /* background-color: blue; */
     border: 1px solid #06365f;
     width: 80px;
     padding: 10px;
