--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,3 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
 * {
   margin: 0;
   padding: 0;
@@ -11,19 +6,33 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
-  background: turquoise;
+  background: rgb(255, 255, 255);
+}
+
+body > header {
+  position: absolute;
+  top: 0;
+  z-index: 1;
+  width: 100%;
+  height: 220px;
+  background-image: linear-gradient(#4a8dc4,#356b9b);
 }
 
 main {
+  position: relative;
   display: flex;
   justify-content: center;
   width: 800px;
   margin: 80px auto 50px;
+  z-index: 2;
 }
 
 footer {
   display: flex;
   justify-content: center;
+  font-size: 0.6em;
+  text-transform: uppercase;
+  font-weight: 900;
 }
 
 main > img {
@@ -49,6 +58,7 @@ header > img {
 .login {
   width: 80px;
   height: 33px;
+  text-decoration: none;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
@@ -72,7 +82,49 @@ header > img {
   background-image: url(../images/frame.png);
   background-size: contain;
   background-repeat: no-repeat;
-  padding: 25px 35px 0;
+  padding: 30px 35px 0;
 }
 
-.insta-text > 
+h1 {
+  color: #06365f;
+  font-weight: 800;
+  letter-spacing: 0.6px;
+  line-height: 1.2em;
+  font-stretch: 110%;
+  margin-bottom: 20px; 
+}
+
+.insta-text > p {
+  color: rgb(46, 46, 46);
+  font-size: 0.75em;
+  letter-spacing: 0.25px;
+  font-weight: 500;
+  margin-bottom: 10px;
+}
+
+.insta-text > div {
+  margin-top: 40px;
+  display: flex;
+  justify-content: start;
+}
+
+.insta-text > div > a > img {
+  margin-right: 15px;
+  height: 40px;
+}
+
+ul {
+  display: flex;
+  justify-content: space-evenly;
+  list-style-type: none;
+}
+
+li {
+  margin: 0 6px;
+  color: #1c5380;
+}
+
+footer > p {
+  color: rgb(207, 207, 207);
+  margin-left: 10px;
+}
