--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,69 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
+
+* {
+  margin: 0;
+  padding: 0;
+}
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-color: #06365f;
+}
+
+.phones {
+  margin: 130px;
+  display: flex;
+  justify-content: flex-start;
+  
+}
+.img {
+  display: flex;
+  justify-content: center;
+}
+
+.logIn {
+  background-color: #1c5380;
+  color: white;
+  padding: 10px 20px;
+}
+
+.box {
+  position: relative;
+  text-align: right;
+  margin: 150px;
+}
+h2 {
+  width: 250px;
+  color: #06365f;
+}
+.text {
+  position: absolute;
+  bottom: 30px;
+  right: 50px;
+  margin-left: 450px;
+  text-align: justify;   
+}
+.imgp {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-start;
+  margin-right: 300px;
+  
+    
+}
+
+footer ul {
+  list-style: none;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+footer li {
+  text-decoration: none;
+  color: #1c5380;
+  font-size: 0.9em;
+}
+.li {
+  color: #a8a8a8;
 }
