--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,7 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
-  background-image: url(file:///home/veronica/Documents/IRONHACK/week1/lab-css-instagram-clone/images/bgtile.png);
+  background-image: url(../images/bgtile.png);
   background-repeat: repeat-x;
 }
 
@@ -48,8 +48,6 @@ article {
   border: 1px solid #305573;
   width: 95px;
   display: block;
-  background-color: darkblue;
-  background-image: url(file:///home/veronica/Documents/IRONHACK/week1/lab-css-instagram-clone/images/bgtile.png);
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -58,7 +56,7 @@ article {
 }
 
 .white-container {
-  background-image: url(file:///home/veronica/Documents/IRONHACK/week1/lab-css-instagram-clone/images/frame.png);
+  background-image: url(../images/frame.png);
   background-repeat: no-repeat;
   background-size: 549px;
 }
@@ -96,7 +94,7 @@ footer ul {
   display: flex;
   justify-content: space-evenly;
   text-align: center;
-  margin: 0 500px;
+  margin: 0px 29%;
   padding-bottom: 50px;
 }
 
