--- a/styles/style.css
+++ b/styles/style.css
@@ -8,3 +8,48 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+#right-block {
+  width: 500px;
+}
+
+#main-pic {
+  margin-right: 100px;
+}
+
+#main-content {
+  display: flex;
+  justify-content: center;
+  margin-top: 200px;
+}
+
+#main-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#login {
+  text-decoration: none;
+  color: white;
+  background-color: #1c5380;
+  display: flex;
+  align-items: flex-start;
+  padding: 10px 15px;
+}
+
+h1 {
+  color: #06365f;
+  font-size: 30px;
+}
+
+#apps-bottons {
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+  margin-right: 100px;
+}
+
+#app-store {
+  margin-right: 30px;
+}
