--- a/styles/style.css
+++ b/styles/style.css
@@ -8,3 +8,66 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.header-container {
+  background-color: #1c5380;
+  height: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+.button {
+  display: flex;
+  background-color: #1c5380;
+  color: antiquewhite;
+  align-items: center;
+  padding: 5px 10px;
+  margin: 0 120px 0 90px;  
+  justify-content: space-between;
+  
+}
+#iphone {
+  position: relative;
+  top: -180px;
+  
+}
+.content-text {
+ display: flex;
+flex-direction: column;
+width: 35%;
+position: relative;
+top: -80px;
+background-image: url('/home/duska/bootcamp/semana1/lab-css-instagram-clone/images/frame.png');
+size: cover;
+background-repeat: no-repeat;
+
+}
+.section-iphone {
+  display: flex;
+  justify-content: space-around;
+  
+}
+h1 {
+  font-size: 30px;
+  width: 70%;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+
+}
+
+footer ul {
+  display: flex;
+  list-style: none;
+  justify-content: center;
+  text-transform: uppercase;
+
+}
+li {
+  margin: 10px;
+}
+.copyr {
+  margin: auto 5px;
+}
