--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,117 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  
+ 
+}
+
+#backgroundColorGradient {
+  background-image: linear-gradient(#1c5380,#06365f);
+  position: absolute;
+  top:0;
+  height: 300px;
+  width: 100%;
+  z-index: -5;
+}
+
+main {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-content: center;
+  margin-top: 8%;
+  margin-left: 8%;
+  margin-right: 8%;
+  align-self: center;
+}
+
+#rightOfPhone {
+  padding-left: 6%;
+  width: 40%
+}
+
+#framePic {
+  background-image: url("/images/frame.png");
+  padding: 3% 3% 3% 5%;
+  background-repeat: no-repeat;
+  
+}
+
+ul li{
+  display: flex;
+  flex-direction: row;
+}
+
+footer {
+  position: relative;
+  
+  align-self: center;
+  margin-top: 90px;
+  justify-content: center;
+  display: flex;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+ 
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: #06365f;
+  text-align: center;
+  padding: 16px;
+  text-decoration: none;
+  font-weight: bolder;
+}
+
+#greyBottomTag {
+  color:grey;
+}
+
+p {
+  max-width: 95%;
+}
+
+h2 {
+  max-width: 95%;
+  overflow: wrap;
+  color: #1c5380;
+}
+
+#download {
+  display: flex;
+  justify-content: space-evenly
+}
+
+#logoIn {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#logInButton {
+  background-image: linear-gradient(#1c5380, #06365f);
+  border: 1px solid black;
+  box-shadow: 2px 2px rgba(0,0,0,0.5);
+  width: 20%;
+  height: 70%;
+  display:flex;
+  justify-content: space-evenly;
+  align-content: center;
+  padding: 10px;
+  color: white;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+#brand {
+  width:60%
 }
