--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,88 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  display: flex;
+  flex-flow: column;
+  height: 100%;
+  background: linear-gradient(180deg, rgb(21, 76, 121) 45%, white 0);
+}
+
+#info-body {
+  display: flex;
+  margin: 120px 80px 20px;
+  flex-flow: row;
+  }
+
+#general-info {
+  display: flex;
+  flex-flow: column;
+ margin-left: 45px;
+}
+
+#name-login {
+  display: flex;
+  flex-flow: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 25px;
+}
+
+.ig-logo {
+  width: auto ;
+  height: auto;
+}
+
+.btn-login {
+  display: flex;
+  background:  rgba(56, 109, 153, 0.8) ;
+  width: 100px;
+  height: auto;
+  border:solid rgba(56, 109, 153, 0.8) ;;
+  justify-content: space-evenly;
+  align-items: center;
+  border-radius: 3px;
+  font-weight:800;
+  color: white;
+  padding: 5px;
+}
+.home{
+  background: ligh;
+  width: 15px;
+  height: auto;
+  
+}
+
+#description{
+    background-color: white;
+    padding: 10px 40px;
+}
+
+#description h2 {
+    color: rgb(21, 76, 121)
+}
+
+#description p {
+  margin-bottom: 20px;
+}
+
+.list{
+  display: flex;
+  flex-flow: row;
+  list-style-type: none;
+  align-content: center;
+  justify-content: space-evenly;
+  margin: 30px 220px ;
+  font-size: small;
+  text-transform: uppercase;
+  color:gray;
+  font-weight: 700;
+  
+}
+footer a {
+  text-decoration: none;
+  color:  rgba(56, 109, 153, 0.8) 
+}
+
+.copy{
+  color:gainsboro) ;
 }
