Versión primera con html

--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,9 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+
 body {
+  background-color: blue;
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
