--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,33 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 0;
+  background-color: #1c5380;
+}
+header {
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+  justify-content: space-evenly;
+}
+
+  .logo {
+    display: flex;
+    float: right;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+  }
+
+  .content {
+    display: flex;
+    display: inline-block;
+    flex-direction: column;
+    float: right;
+    flex-wrap: right;
+  }
+
+ul {
+  list-style: none;
+  display: flex;
+  justify-content: space-evenly;
 }
