--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,106 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  box-sizing:border-box; 
+  padding:0; 
   margin: 0;
 }
+
+h1 {
+  color: #3676aa;
+}
+
+
+a {
+  text-decoration: none;
+  color: #3676aa;
+
+}
+
+.flex {
+  display: flex;
+  justify-content:center;
+  align-items: center;
+  height: 100%;
+}
+
+
+
+.container {
+  margin-top: 300px;
+  width:100%; 
+  height:700px;
+  margin-bottom: 1rem;
+}
+
+
+/* Showcase Section */ 
+
+.showcase {
+  height: 400px;
+  background-color: #3676aa;
+  flex-direction: column;
+}
+
+.showcase-content {
+  width: 500px;
+}
+
+/* Phone*/ 
+.showcase img {
+  padding-right:3rem;
+}
+
+/* Logo */ 
+.logo {
+  justify-content:space-between;
+  margin: 10px;
+  margin-bottom: 1rem;
+}
+
+.logo img {
+  width:50%; 
+} 
+
+/* Homebutton */ 
+
+.btn {
+  
+  padding: 0px 20px;
+  cursor: pointer;
+  border:none; 
+  border-radius: 3px;
+  background: blue; 
+  height:50px;
+  width: 110px;
+}
+
+.btn-img {
+ width: 40%;
+ 
+}
+
+/* card*/ 
+
+.card {
+  background-color: white;
+  color: #333;
+  border-radius: 10px;
+  box-shadow: 0 3px 10px rgb(0,0,0,0.2);
+  padding:20px;
+  margin:10px;
+}
+
+/*footer*/ 
+
+footer ul {
+  display:flex;
+  margin:10px;
+  list-style-type: none;
+}
+
+footer li {
+margin:10px;
+}
+
+
