--- a/styles/style.css
+++ b/styles/style.css
@@ -6,5 +6,84 @@ light blue: #1c5380
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  background-image: url(/images/bgtile.png);
+  background-repeat: repeat-x;
+  display: flex;
+  flex-direction: column;
+   
+}
+
+.container {
+  margin: 100px auto;
+  display:flex;
+  align-items: flex-start; 
+}
+
+.container .content   {
+  margin-left:  48px
+}
+
+.container .content  header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 128px;
+  padding: 0 12px;
+}
+.container .content  .frame {
+  background:url(../images/frame.png) no-repeat;
+  padding: 30px;
+  max-width: 450px;
+}
+.content h1{
   margin: 0;
+  font-size: 24px;
+  font-weight: bold;
+  color: #06365f;
+}
+button {
+  background: linear-gradient(to bottom, #7390a9, #355e82);
+  border: none;
+  padding: 10px ;
+  color: white;
+  text-shadow: #eeeeee 1px;
+  box-shadow: 0 0 3px #333;
+  border-radius: 2px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  min-width: 96px;
+  font-weight: bold;
+
+}
+i.home {
+  background: url(../images/home.png) no-repeat;
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+}
+
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 14px;
+}
+
+footer ul {
+  display: flex;
+  list-style: none;
+}
+footer ul a {
+  text-decoration: none;
+  color: #1c5380;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: 1em;
+  margin: 5px 10px;
+}
+footer strong {
+  color: #888889;
+  margin:0  10px;
 }
