--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,88 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background: url("../images/bgtile.png");
+  background-size: 100% 300px;
+  background-repeat: no-repeat;
+  font-weight: 400;
+  margin-top: 150px;
+}
+
+.columns {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin: 7%;
+}
+
+.right-column {
+  margin-left: 50px;
+}
+
+.inst-log {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo-insta {
+  max-height: 150px;
+}
+
+.login-button {
+  background-image: url("../images/bgtile.png");
+  background-repeat: cover;
+  background-size: auto;
+  border: 1px black solid;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100px;
+  max-height: 40px;
+  color: white;
+  font-weight: bold;
+}
+
+.main-body {
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+h2 {
+  color: #06365f;
+  margin: 30px 30px 0px 30px;
+  padding-top: 30px;
+}
+
+.descr {
+  margin: 30px 30px 0px 30px;
+}
+
+.buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  margin: 30px 30px 0px 30px;
+}
+
+.download-button {
+  margin: 20px 20px 0 0;
+}
+
+li {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin: 15px;
+  color: #06365f;
+  text-transform: uppercase;
+  font-size: 0.7em;
+}
+
+.insta {
+  color: gray;
 }
