--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,22 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 0; 
+}
+
+.top_header{
+  background-color: #1c5380;
+  position: fixed;
+  left:0;
+  top:0;
+  height: 300px;
+  width: 100%;
+}
+
+main {
+  margin-top: 200px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  background-color: transparent;
 }
