--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,24 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+}
+
+header {
+  background-color: #1c5380;
+  height: 300px;
+}
+
+header > div {
+  margin-top: 200px;
+  margin-left: 200px;
+  border: 2px solid red;
+  width: 600px;
 }
